# HaRay

./: HaRay.cabal  README.md
Graphics/Rendering/: HaRay.hs
Graphics/Rendering/HaRay/: Base.hs  Camera.hs  Entity.hs  Geometry.hs  Light.hs  Material.hs  Scene.hs
Graphics/Rendering/HaRay/Base/: Color.hs  Ray.hs  Transform.hs  Types.hs  Vector3D.hs
Graphics/Rendering/HaRay/Geometry/: Primitives.hs
app/: Main.hs
